# EuropassXML_to_ReactiveResumeJSON

./: .gitignore  README.md  adv.ui  cli.py  converter.py  mainwindow.ui  map_resume.py  media_rc.py  parse_candidate.py  pyproject.toml  template.py
.github/workflows/: release.yml
100_src/: install_dependencies.sh  sample.json  sample.xml
200_media/: media.qrc
europass_converter/: cli.py  contacts.py  converter.py  gui.py  languages.py  map_resume.py  parse_candidate.py  sanitize_html.py  ui_adv.py  ui_mainwindow.py  version.py
