[project]
authors = [{ name = "Fabio Ashtar Telarico" }]
keywords = ["europass", "resume", "cv", "json resume", "reactive resume", "xml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Text Processing :: Markup :: XML",
  "Topic :: Utilities",
]
name = "europassxml-to-reactiveresumejson"
version = "0.2.0"
description = "Convert Europass Candidate XML exports into Reactive Resume JSON Resume v5."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE", "LICENSE-docs"]
dependencies = [
    "lxml",
    "beautifulsoup4",
    "bleach",
]

[project.urls]
Homepage = "https://github.com/FATelarico/EuropassXML_to_ReactiveResumeJSON"
Repository = "https://github.com/FATelarico/EuropassXML_to_ReactiveResumeJSON"
Issues = "https://github.com/FATelarico/EuropassXML_to_ReactiveResumeJSON/issues"
Changelog = "https://github.com/FATelarico/EuropassXML_to_ReactiveResumeJSON/releases"
Documentation = "https://github.com/FATelarico/EuropassXML_to_ReactiveResumeJSON#README"

[project.optional-dependencies]
gui = [
    "PySide6",
    "pypdf",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
europass-convert = "europass_converter.cli:main"
europass-convert-gui = "europass_converter.gui:main"

[tool.pyside6-project]
files = [
    "200_media/media.qrc",
    "adv.ui",
    "europass_converter/__init__.py",
    "europass_converter/cli.py",
    "europass_converter/contacts.py",
    "europass_converter/converter.py",
    "europass_converter/gui.py",
    "europass_converter/languages.py",
    "europass_converter/map_resume.py",
    "europass_converter/parse_candidate.py",
    "europass_converter/sanitize_html.py",
    "europass_converter/template.py",
    "europass_converter/version.py",
    "europass_converter/media.py",
    "mainwindow.ui",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["europass_converter"]
py-modules = ["media_rc"]
